fix virtualized list overflow

--- a/src_frontend/styles/SystemMenu.css
+++ b/src_frontend/styles/SystemMenu.css
@@ -54,6 +54,7 @@
   max-height: calc(100vh - 85px);
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .system-menu-overlay .legenda-content {
